--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -1,42 +1,46 @@
 <%- include('../partials/header') %>
 
-<div class="container">
+<div class="container settings-form">
     <h1>Site Settings</h1>
 
     <form action="/admin/settings" method="POST" enctype="multipart/form-data">
-        <div>
-            <label for="blog_title">Blog Title:</label>
-            <input type="text" id="blog_title" name="blog_title" value="<%= settings.blog_title %>" required>
+        <div class="main-content">
+            <div class="form-group">
+                <label for="blog_title">Blog Title:</label>
+                <input type="text" id="blog_title" name="blog_title" value="<%= settings.blog_title %>" required>
+            </div>
+
+            <div class="form-group">
+                <label for="meta_description">Meta Description:</label>
+                <textarea id="meta_description" name="meta_description" required><%= settings.meta_description %></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="custom_javascript">Custom JavaScript:</label>
+                <textarea id="custom_javascript" name="custom_javascript" rows="10"><%= settings.custom_javascript %></textarea>
+                <p class="warning">Warning: Custom JavaScript is executed on every page. Only enter code you trust and understand the implications of.</p>
+            </div>
         </div>
 
-        <div>
-            <label for="meta_description">Meta Description:</label>
-            <textarea id="meta_description" name="meta_description" required><%= settings.meta_description %></textarea>
-        </div>
+        <div class="side-content">
+            <div class="form-group">
+                <label for="favicon">Favicon:</label>
+                <input type="file" id="favicon" name="favicon" accept="image/x-icon,image/png">
+                <% if (settings.favicon_path) { %>
+                    <img src="<%= settings.favicon_path %>" alt="Current Favicon" class="favicon-preview">
+                <% } %>
+            </div>
 
-        <div>
-            <label for="favicon">Favicon:</label>
-            <input type="file" id="favicon" name="favicon" accept="image/x-icon,image/png">
-            <% if (settings.favicon_path) { %>
-                <img src="<%= settings.favicon_path %>" alt="Current Favicon" style="max-width: 32px; max-height: 32px;">
-            <% } %>
-        </div>
+            <div class="form-group checkbox-group">
+                <label for="show_login_button">
+                    <input type="checkbox" id="show_login_button" name="show_login_button" value="true"
+                            <%= settings.show_login_button === 'true' ? 'checked' : '' %>>
+                    Show Login Button
+                </label>
+            </div>
 
-        <div>
-            <label for="show_login_button">
-                <input type="checkbox" id="show_login_button" name="show_login_button" value="true"
-                        <%= settings.show_login_button === 'true' ? 'checked' : '' %>>
-                Show Login Button
-            </label>
+            <button type="submit">Update Settings</button>
         </div>
-
-        <div>
-            <label for="custom_javascript">Custom JavaScript:</label>
-            <textarea id="custom_javascript" name="custom_javascript" rows="10" cols="50"><%= settings.custom_javascript %></textarea>
-            <p class="warning">Warning: Custom JavaScript is executed on every page. Only enter code you trust and understand the implications of.</p>
-        </div>
-
-        <button type="submit">Update Settings</button>
     </form>
 </div>
 
