--- a/views/admin/create-article.ejs
+++ b/views/admin/create-article.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/admin/header') %>
 
 <div class="container article-form">
     <h1>Create New Article</h1>
@@ -80,4 +80,4 @@
     </script>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/admin/footer') %>
