--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/admin/header') %>
 
 <div class="container">
     <h1>Admin Dashboard</h1>
@@ -81,4 +81,4 @@
     <% } %>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/admin/footer') %>
