--- a/views/admin/edit-article.ejs
+++ b/views/admin/edit-article.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/admin/header') %>
 
 <div class="container article-form">
     <h1>Edit Article</h1>
@@ -89,4 +89,4 @@
     </script>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/admin/footer') %>
