--- a/views/admin/menu-manager.ejs
+++ b/views/admin/menu-manager.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/admin/header') %>
 
 <div class="container menu-manager">
     <h1>Menu Manager</h1>
@@ -106,4 +106,4 @@
     }
 </script>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/admin/footer') %>
