--- a/views/admin/plugin-config.ejs
+++ b/views/admin/plugin-config.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/admin/header') %>
 
 <div class="container">
     <h1><%= pluginName %> Configuration</h1>
@@ -18,4 +18,4 @@
     </form>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/admin/footer') %>
