--- a/views/admin/plugins.ejs
+++ b/views/admin/plugins.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/admin/header') %>
 
 <div class="container">
     <h1>Plugins</h1>
@@ -35,4 +35,4 @@
     </table>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/admin/footer') %>
