--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/admin/header') %>
 
 <div class="container settings-form">
     <h1>Site Settings</h1>
@@ -19,6 +19,15 @@
                 <label for="custom_javascript">Custom JavaScript:</label>
                 <textarea id="custom_javascript" name="custom_javascript" rows="10"><%= settings.custom_javascript %></textarea>
                 <p class="warning">Warning: Custom JavaScript is executed on every page. Only enter code you trust and understand the implications of.</p>
+            </div>
+
+            <div class="form-group">
+                <label for="selected_template">Select Template:</label>
+                <select id="selected_template" name="selected_template">
+                    <% templates.forEach(template => { %>
+                        <option value="<%= template %>" <%= settings.selected_template === template ? 'selected' : '' %>><%= template %></option>
+                    <% }) %>
+                </select>
             </div>
         </div>
 
@@ -44,4 +53,4 @@
     </form>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/admin/footer') %>
