--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/admin/header') %>
 
 <div class="container">
     <h1>Login</h1>
@@ -20,4 +20,4 @@
     </form>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/admin/footer') %>
