--- a/views/templates/default/article.ejs
+++ b/views/templates/default/article.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('../../partials/header') %>
 
 <div class="container">
     <article>
@@ -40,4 +40,4 @@
     Prism.highlightAll();
 </script>
 
-<%- include('partials/footer') %>
+<%- include('../../partials/footer') %>
