--- a/views/templates/default/search.ejs
+++ b/views/templates/default/search.ejs
@@ -1,15 +1,9 @@
-<%- include('partials/header') %>
+<%- include('../../partials/header') %>
 
 <div class="container">
     <h1>Search Results for "<%= query %>"</h1>
 
-    <form action="/search" method="GET">
-        <input type="text" name="q" value="<%= query %>" required>
-        <button type="submit">Search</button>
-    </form>
-
     <% if (articles.length > 0) { %>
-        <p>Found <%= total %> result(s)</p>
         <% articles.forEach(article => { %>
             <article class="article-preview">
                 <h2><a href="/article/<%= article.slug %>"><%= article.title %></a></h2>
@@ -24,6 +18,9 @@
                         <a href="/tag/<%= tag.name.toLowerCase() %>" class="tag"><%= tag.name %></a>
                     <% }) %>
                 </div>
+                <% if (article.main_image) { %>
+                    <img src="<%= article.main_image %>" alt="<%= article.title %>" class="article-preview-image">
+                <% } %>
                 <p class="excerpt"><%= helpers.createExcerpt(article.content) %></p>
             </article>
         <% }) %>
@@ -44,8 +41,8 @@
             <% } %>
         </div>
     <% } else { %>
-        <p>No results found for "<%= query %>"</p>
+        <p>No articles found matching your search.</p>
     <% } %>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('../../partials/footer') %>
